--- a/client/laya-client/laya/pages/test/Main.ui
+++ b/client/laya-client/laya/pages/test/Main.ui
@@ -1,8 +1,8 @@
 {
     "x":0,
     "type":"View",
-    "selectedBox":23,
-    "selecteID":33,
+    "selectedBox":20,
+    "selecteID":42,
     "props":{"text":"ID:3213124","sceneWidth":1920,"sceneHeight":1080,"sceneColor":"#000000","sceneBg":"laya/views/test/Main.jpg"},
     "nodeParent":-1,
     "label":"View",
@@ -339,7 +339,7 @@
                     "props":{"y":215.00000000000003,"x":476.99999999999983,"var":"notice"},
                     "nodeParent":20,
                     "label":"Sprite(notice)",
-                    "isOpen":false,
+                    "isOpen":true,
                     "isDirectory":true,
                     "isAniNode":true,
                     "hasChild":true,
@@ -353,6 +353,7 @@
                     "compId":14,
                     "child":[
                         {
+                            "x":45,
                             "type":"Image",
                             "props":{"y":0,"x":0,"var":"noticeBg","skin":"ui/home/notice_bg.png"},
                             "nodeParent":14,
@@ -372,6 +373,7 @@
                                 ]
                         },
                         {
+                            "x":45,
                             "type":"Image",
                             "props":{"y":5,"x":3,"skin":"ui/home/notice_icon.png"},
                             "nodeParent":14,
@@ -391,6 +393,7 @@
                                 ]
                         },
                         {
+                            "x":45,
                             "type":"Label",
                             "props":{"y":12,"x":111,"width":897,"var":"noticeLabel","text":"我是跑马灯我是跑马灯我是跑马灯我是跑马灯我是跑马灯我是跑马灯我是跑马灯我是跑马灯","overflow":"hidden","height":40,"fontSize":40,"color":"#ffcc01","bold":false,"align":"left"},
                             "nodeParent":14,
@@ -413,7 +416,7 @@
                 {
                     "x":30,
                     "type":"Sprite",
-                    "props":{"y":352.25,"x":726},
+                    "props":{"y":617,"x":1103,"width":682,"pivotY":-5.882352941176464,"pivotX":-8.823529411764753,"height":360},
                     "nodeParent":20,
                     "label":"Sprite",
                     "isOpen":true,
@@ -432,7 +435,7 @@
                         {
                             "x":45,
                             "type":"Button",
-                            "props":{"y":0,"x":0,"width":531,"var":"crateBtn","skin":"ui/home/btn_create.png","label":"label","height":595},
+                            "props":{"y":23,"x":25,"width":300,"var":"crateBtn","skin":"ui/home/btn_create.png","label":"label","height":330},
                             "nodeParent":42,
                             "label":"Button(crateBtn)",
                             "isOpen":true,
@@ -453,7 +456,7 @@
                         {
                             "x":45,
                             "type":"Button",
-                            "props":{"y":0,"x":554.0000000000002,"width":531,"var":"joinBtn","skin":"ui/home/btn_join.png","label":"label","height":595},
+                            "props":{"y":17,"x":361,"width":300,"var":"joinBtn","skin":"ui/home/btn_join.png","label":"label","height":330},
                             "nodeParent":42,
                             "label":"Button(joinBtn)",
                             "isDirectory":false,
@@ -534,7 +537,7 @@
                 {
                     "x":30,
                     "type":"Sprite",
-                    "props":{"y":316,"x":104,"var":"newNoticeSprite"},
+                    "props":{"y":321,"x":470,"width":560,"var":"newNoticeSprite","height":656},
                     "nodeParent":20,
                     "label":"Sprite(newNoticeSprite)",
                     "isOpen":true,
@@ -553,7 +556,7 @@
                         {
                             "x":45,
                             "type":"Image",
-                            "props":{"y":0,"x":0,"width":373,"skin":"base/dialog_bg.png","scaleY":1.5,"scaleX":1.5,"height":445,"alpha":0.7},
+                            "props":{"y":0,"x":0,"width":373,"skin":"base/dialog_bg.png","scaleY":1.5,"scaleX":1.5,"height":445,"alpha":0.5},
                             "nodeParent":48,
                             "label":"Image",
                             "isOpen":true,
